--- a/style.css
+++ b/style.css
@@ -2,15 +2,23 @@ body {
     margin:0;
     background:darkgray;
     overflow:hidden;
-    text-align:center;
+    display:flex;
+    justify-content:center;
+    align-items: center;
 }
 
-#myCanvas{
+
+#verticalButtons{
+    display: flex;
+    flex-direction: column;
+}
+
+
+#networkCanvas{
+    background: black;
+}
+
+
+#carCanvas{
     background: lightgray;
-
-
-
-
-
-
 }
