--- a/style.css
+++ b/style.css
@@ -13,6 +13,18 @@ body {
     flex-direction: column;
 }
 
+button {
+    border: none;
+    border-radius: 5px;
+    padding: 5px 5px 7px 5px;
+    margin: 2px;
+    cursor:pointer;
+}
+
+button:hover{
+    background:blue;
+}
+
 
 #networkCanvas{
     background: black;
